@@ -1,3 +1,7 @@
+2014-03-14  Alexander V. Lukyanov <lavv17f@gmail.com>
+
+	* SSH_Access.cc: add another password prompt format for FreeBSD.
+
 2014-03-13  Alexander V. Lukyanov <lavv17f@gmail.com>
 
 	* FileAccess.cc, FileAccess.h: get rid of direct delete calls.
